Fixed Hearo and whitespace on homepage
[#61946368]

--- a/app/assets/stylesheets/main/modules/_main_container.scss
+++ b/app/assets/stylesheets/main/modules/_main_container.scss
@@ -2,7 +2,6 @@
 
 .container {
   background: #fff;
-  padding-top: 60px;
 }
 
 .container-nav {
