--- a/app/assets/stylesheets/main/modules/_main_hearo.scss
+++ b/app/assets/stylesheets/main/modules/_main_hearo.scss
@@ -1,7 +1,7 @@
 @import "main/helpers";
 
 .hero {
-  height: 700px;
+  height: 456px;
   background: #b1cad5 url(image-path("hero.png"));
   background-position: center center;
   cursor: pointer;
