--- a/app/assets/stylesheets/main/modules/_main_psychics.scss
+++ b/app/assets/stylesheets/main/modules/_main_psychics.scss
@@ -17,13 +17,12 @@ a.psychics-more {
 }
 
 .container-psychics-loading-container {
-  height: 120px;
+  height: 60px;
   text-align: center;
 };
 
 .container-psychics-loading {
   margin: 0 auto;
-  padding: 30px;
   display: none;
 }
 
